Added layer order enforcement

--- a/st_flask/templates/index.html
+++ b/st_flask/templates/index.html
@@ -447,9 +447,25 @@
             //Default map center and coordinate
             const savedCenter = JSON.parse(localStorage.getItem('defaultMapCenter') || '[32.0853, 34.7818]');
             const savedZoom = parseInt(localStorage.getItem('defaultMapZoom') || '10', 10);
-            const map = L.map('map', { attributionControl: false }).setView(savedCenter, savedZoom);
 
+            //Create map
+            const map = L.map('map', { attributionControl: false }).setView(savedCenter, savedZoom);
             L.control.attribution({ prefix: false }).addTo(map);
+
+
+            //Add zIndex panes for enforcing order between layers
+            map.createPane("gridPane");
+            map.createPane("markerPane");
+            map.createPane("trailPane");
+
+            map.getPane("gridPane").style.zIndex = 400;
+            map.getPane("markerPane").style.zIndex = 500;
+            map.getPane("trailPane").style.zIndex = 600;
+
+            //Add layers to map
+            let gridLayerGroup = L.layerGroup().addTo(map);
+            let markersLayerGroup = L.layerGroup().addTo(map);
+            let trailLayerGroup = L.layerGroup().addTo(map);
 
             
 
@@ -460,10 +476,7 @@
                 attribution: 'Created by QGIS'
             }).addTo(map);
 
-            //Add data layers to map
-            let markersLayerGroup = L.layerGroup().addTo(map);  
-            let gridLayerGroup = L.layerGroup().addTo(map);
-            let trailLayerGroup = L.layerGroup().addTo(map);
+
 
 
             function loadGridLayer() {
@@ -494,7 +507,8 @@
                         const rectangle = L.rectangle(bounds, {
                             color: color,
                             fillOpacity: 0.3,
-                            weight: 1
+                            weight: 1,
+                            pane: 'gridPane'
                         }).addTo(gridLayerGroup);
 
                         const percent = Math.round((ok / total) * 100);
@@ -506,6 +520,7 @@
 
                     });
                 });
+                
             }
 
             // Load markers
@@ -522,7 +537,8 @@
                             const marker = L.circleMarker([item.LATITUDE, item.LONGITUDE], {
                                 color: color,
                                 radius: 8,
-                                fillOpacity: 0.7
+                                fillOpacity: 0.7,
+                                pane: 'markerPane'
                             }).addTo(markersLayerGroup);
 
                             marker.bindTooltip(`
@@ -567,7 +583,10 @@
                         const polyline = L.polyline(trails[trailId], {
                             color: 'orange',
                             weight: 4,
-                            opacity: 0.8
+                            opacity: 0.8 ,
+                            dashArray: '10,6',
+                            lineCap: 'round',
+                            pane: 'trailPane'
                         }).addTo(trailLayerGroup);
 
                         // Attach delete on click
@@ -588,6 +607,8 @@
                     loadTrail();
                 });
             }
+
+            
 
 
 
